[package]
name = "lookup_sorter"
description = "A program for making DNS queries on a list of names, then trying to determine if they are on the F5"
authors = ["Troy Caro <troy.caro@pitt.edu>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
dns-lookup = "1.0.8"
env_logger = "0.10.0"
http-serde = "1.1.2"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.94"
